save/deployment/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: santa-claus-game
  namespace: santa
spec:
  selector:
    app: santa-claus-game
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
