save/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: santa-claus-game
  namespace: santa
  # annotations:
  #   nginx.ingress.kubernetes.io/proxy-buffering: "off"
  #   nginx.ingress.kubernetes.io/proxy-cache: "off"
  #   nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
  #   nginx.ingress.kubernetes.io/rewrite-target: 

spec:
  ingressClassName: nginx
  rules:
  - host: santa.apps.g01.containerize.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: santa-claus-game
            port:
              number: 8080
